kustomize/parlassets/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parlassets
  labels:
    app: parlassets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parlassets
  template:
    metadata:
      labels:
        app: parlassets
    spec:
      containers:
        - name: parlassets
          image: parlassets-ukrajina
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 25Mi
              cpu: 25m
            limits:
              memory: 25Mi
              cpu: 25m
          lifecycle:
            preStop:
              exec:
                command: ["sh", "-c", "sleep 5"] # give load balancer time to stop sending traffic to this pod
          startupProbe:
            httpGet:
              path: /readyz
              port: 80
            periodSeconds: 10
            failureThreshold: 30 # 30x10 = 300s = 5min
